--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,13 +17,13 @@ html(lang="en")
                             li
                                 a(href="/") Home
                             li
-                                a(href="/menu") Menu
+                                a(href="/menus") Menus
                             li
-                                a(href="/burger") Burger
+                                a(href="/burgers") Burgers
                             li
-                                a(href="/boisson") Boisson
+                                a(href="/boissons") Boissons
                             li
-                                a(href="/accompagnement") Accompagnement
+                                a(href="/accompagnements") Accompagnements
                     block content
                 block scripts
                     script(src="/scripts/app.js")
